# vk-test

./: .clang-format  .gitignore  CMakeLists.txt  compile-shaders.sh  conanfile.txt  init.sh
.conan/profiles/: msvc  release
shaders/: skybox.frag  skybox.vert  tri.frag  tri.vert
src/: Buffer.cpp  Buffer.h  DepthImage.cpp  DepthImage.h  Image.cpp  Image.h  OneTimeCommand.cpp  OneTimeCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VK.cpp  VK.h  main.cpp
src/common/: Thing.h  Transform.h
src/gfx/: Camera.cpp  Camera.h
src/gfx/vk/: OneTimeCommand.cpp  OneTimeCommand.h  VK.cpp  VK.h  vkutil.h
src/gfx/vk/gpu_resources/: Buffer.cpp  Buffer.h  DepthImage.cpp  DepthImage.h  Image.cpp  Image.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/gfx/vk/pipeline/: Pipeline.cpp  Pipeline.h
src/gfx/vk/types/: ModelConstants.h  UniformBufferObject.h  Vertex.h  VulkanContext.cpp  VulkanContext.h
src/gpu_resources/: Buffer.cpp  Buffer.h  DepthImage.cpp  DepthImage.h  Image.cpp  Image.h  Shader.cpp  Shader.h  Texture.h
src/input/: Keyboard.h  Mouse.h
src/objects/: Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Triangle.cpp  Triangle.h
src/objects/loaders/: GLTF.h  GLTFLoader.cpp  GLTFLoader.h
src/objects/loaders/gltf/: GLTF.h  GLTFLoader.cpp  GLTFLoader.h
src/objects/prefabs/: Cube.cpp  Cube.h  Plane.cpp  Plane.h
src/types/: Vertex.h
